# kutup

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.server  LICENSE  README.md  TRADEMARK.md  docker-compose-volume.yml  docker-compose.chat-federation.yml  docker-compose.chat-transparency-witness.yml  docker-compose.test.yml  docker-compose.yml  install-onlyoffice.sh  lifecycle.json  package.json  pnpm-lock.yaml  seaweedfs-init.sh  seaweedfs-s3.json
.github/workflows/: ci.yml  release-desktop.yml  release.yml
backend/: Dockerfile  go.mod  go.sum  main.go
backend/cmd/: sweep.go
cli/: .goreleaser.yaml  go.mod  go.sum  main.go
crates/kutup-chat-core/: Cargo.toml
crates/kutup-chat-core/.cargo/: config.toml
crates/kutup-chat-core/src/: address.rs  clock.rs  db.rs  engine.rs  error.rs  keys.rs  lib.rs  manifest.rs  profile.rs  sealed_sender.rs  session.rs  store.rs  transport.rs  wasm.rs  wire.rs
crates/kutup-chat-core/src/db/: indexed_db.rs  sqlite.rs
crates/kutup-chat-core/tests/: prekeys.rs  receive.rs  registration.rs  roundtrip.rs  send.rs  transparency_monitor.rs
crates/kutup-chat-proto/: Cargo.toml
crates/kutup-chat-proto/src/: content.rs  federation.rs  identity.rs  lib.rs  profile.rs  sealed_sender.rs  security_policy.rs  transparency.rs
crates/kutup-cli/: Cargo.toml
crates/kutup-cli/src/: config.rs  context.rs  cryptohelpers.rs  errors.rs  main.rs  mimetype.rs  output.rs  session.rs  syncengine.rs  transfer.rs  uploader.rs  whiteboard.rs
crates/kutup-cli/src/api/: assets.rs  devices.rs  federation.rs  files.rs  mod.rs  public.rs  sharing.rs  trash.rs  tus.rs  types.rs  versions.rs
crates/kutup-cli/src/commands/: color.rs  devices.rs  download.rs  login.rs  logout.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pubshare.rs  recover.rs  register.rs  rm.rs  share.rs  sync.rs  trash.rs  twofa.rs  upload.rs  version.rs  versions.rs  whoami.rs
crates/kutup-client-ffi/: Cargo.toml  uniffi.toml
crates/kutup-client-ffi/src/: http.rs  lib.rs  types.rs
crates/kutup-client-ffi/tests/: native_smoke.rs
crates/kutup-crypto/: Cargo.toml  README.md
crates/kutup-crypto/src/: asset.rs  envelope.rs  error.rs  kdf.rs  lib.rs  mnemonic.rs  sealedbox.rs  secretbox.rs  stream.rs
crates/kutup-crypto/tests/: vectors.rs
crates/kutup-crypto/tests/vectors/: crypto.json  envelope.json
crates/kutup-federation-proto/: Cargo.toml
crates/kutup-federation-proto/examples/: generate_vectors.rs
crates/kutup-federation-proto/src/: discovery.rs  error.rs  http_signatures.rs  identity.rs  lib.rs  policy.rs
crates/kutup-federation-proto/test-vectors/: federation-v2.json
crates/kutup-federation-proto/tests/: conformance_vectors.rs
crates/kutup-server/: Cargo.toml
crates/kutup-server/migrations/: 003_create_files.up.sql  005_create_public_shares.down.sql  006_admin_features.up.sql  007_collection_color.down.sql  007_collection_color.up.sql  008_add_username.up.sql  009_share_privileges.down.sql  010_federation.up.sql  011_recovery_key_verifier.down.sql  012_collab_edit.up.sql  013_sender_seq.down.sql  015_user_color.down.sql  016_file_assets.down.sql  016_file_assets.up.sql  017_create_uploads.up.sql  019_trash.down.sql  019_trash.up.sql  020_admin_audit_log.up.sql  021_chat.down.sql  021_chat.up.sql  022_chat_manifests.down.sql  022_chat_manifests.up.sql  023_chat_ws_tickets.down.sql  023_chat_ws_tickets.up.sql  024_chat_registration_idempotency.down.sql  024_chat_registration_idempotency.up.sql  025_chat_send_scopes.down.sql  025_chat_send_scopes.up.sql  026_chat_federation.down.sql  026_chat_federation.up.sql  027_chat_profiles.down.sql  027_chat_profiles.up.sql  028_chat_transparency.down.sql  028_chat_transparency.up.sql  029_chat_transparency_map.down.sql  029_chat_transparency_map.up.sql  030_chat_transparency_signatures.down.sql  030_chat_transparency_signatures.up.sql  031_chat_federation_policy.down.sql  031_chat_federation_policy.up.sql  (+10 more)
crates/kutup-server/src/: chat_federation.rs  chat_federation_policy.rs  chat_hub.rs  chat_transparency.rs  chat_transparency_auditor.rs  chat_transparency_monitor.rs  config.rs  db.rs  drive_federation.rs  error.rs  hub.rs  jobs.rs  jwt.rs  legacy_chat_federation_v1.rs  main.rs  middleware.rs  models.rs  openapi.rs  ratelimit.rs  sealed_sender_service.rs  ssrf.rs  storage.rs  storage_probe.rs  telemetry.rs  totp.rs
crates/kutup-server/src/federation/: config.rs  discovery.rs  feature_policy.rs  identity.rs  live_tests.rs  mod.rs  policy.rs  replay.rs  transport.rs  trust.rs
crates/kutup-server/src/handlers/: admin.rs  auth.rs  chat.rs  collab.rs  collections.rs  devices.rs  federation.rs  fedproxy.rs  file_assets.rs  file_versions.rs  files.rs  mod.rs  shares.rs  trash.rs  tus.rs
crates/kutup-server/tests/: chat_federation_live.rs  chat_live.rs  federation_phase_b_migration_live.rs  federation_phase_c_migration_live.rs  federation_phase_d_migration_live.rs
crates/kutup-transparency-auditor/: Cargo.toml
crates/kutup-transparency-auditor/src/: main.rs
docs/: api.md  architecture.md  chat-native-bindings.md  chat-protocol.md  chat-security-threat-model.md  contributing.md  crypto-agility.md  desktop-build.md  federation-protocol.md  mobile-build.md  onlyoffice.md  roadmap.md  self-hosting.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: policy_transparency_parsers.rs  sealed_sender_parsers.rs
nginx/: nginx.conf
scripts/: audit-unified-federation.sh  build-chat-wasm.sh  generate-native-bindings.sh  test-chat-federation.sh  test-chat-transparency-witness.sh  verify-cli.sh
spikes/libsignal-wasm/: .gitignore  Cargo.toml  README.md  run-wasi.mjs
spikes/libsignal-wasm/.cargo/: config.toml
spikes/libsignal-wasm/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+446 files in other folders)
