# Root Cargo workspace for the Go→Rust rewrite.
#
# Crates (see docs/contributing.md and CLAUDE.md):
#   crates/kutup-crypto  — shared E2EE primitives; the canonical mirror partner of
#                          frontend/src/crypto/ (libsodium-wrappers). Used by the CLI
#                          and (for the collab envelope) the server.
#   crates/kutup-cli     — the `kutup` CLI         (replaces cmd/kutup/)      [pending]
#   crates/kutup-server  — the backend API binary  (replaces backend/)       [pending]
#
# src-tauri/ is its own standalone crate and is intentionally NOT a member of this
# workspace; `exclude` keeps `cargo build` there independent of this tree.
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["src-tauri"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.82"

# Shared dependency versions, pinned once for the whole workspace.
[workspace.dependencies]
# Crypto — libsodium-compatible primitives in pure Rust (no C toolchain), plus the
# RustCrypto crates for the constructions dryoc does not expose (HKDF-SHA256, the
# IETF XChaCha20-Poly1305 AEAD used for asset blobs, and Ed25519 frame signatures).
dryoc = "0.7"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"

# Common plumbing.
thiserror = "2"
base64 = "0.22"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
# preserve_order so json! output matches the Go CLI's printf key ordering.
serde_json = { version = "1", features = ["preserve_order"] }

# CLI (kutup-cli).
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
anyhow = "1"
dirs = "6"
# Linux Secret Service needs libdbus (a C dep); we use native keychains on
# macOS/Windows and a chmod-600 file fallback on Linux (see session.rs).
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native"] }
redb = "2"
rpassword = "7"
rand = "0.8"
indicatif = "0.17"
qrcode = "0.14"
time = { version = "0.3", features = ["formatting"] }
notify = "6"
url = "2"

# Dev / test.
hex = "0.4"

[profile.release]
# Match the security-conscious, debuggable posture; tune later for the server/CLI.
opt-level = 2
