[package]
name = "kutup"
version = "0.1.0"
description = "Kutup — E2EE Drive native shell (Tauri 2, desktop + mobile)."
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.77"

# Library target so Tauri Mobile can link us as cdylib/staticlib on iOS+Android,
# and the desktop binary can re-use the same entry point via lib.rs::run().
[lib]
name = "kutup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime
tauri = { version = "2", features = ["protocol-asset"] }

# First-party plugins we'll consume from the JS side via @tauri-apps/api.
# Keep the list lean for v1 — add more as they become load-bearing.
tauri-plugin-dialog = "2"            # native file picker (open / save dialogs)
tauri-plugin-fs = "2"                # filesystem access from JS, scoped via capabilities
tauri-plugin-http = "2"              # native HTTP that bypasses CORS — used for big-file streaming uploads
tauri-plugin-os = "2"                # platform / locale info
tauri-plugin-shell = "2"             # spawn / open URL handler (desktop only effectively)
tauri-plugin-notification = "2"      # system notifications
tauri-plugin-store = "2"             # encrypted-at-rest preferences store for settings
tauri-plugin-process = "2"           # restart / exit, used by the updater flow

# Desktop-only: auto-updater. Mobile updates happen via the App Store / Play Store.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Serde for any custom command payloads we add later.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime for streaming uploads / downloads in Rust.
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["custom-protocol"]
# Tauri's custom-protocol is required for release builds — embeds the frontend
# bundle and serves it via a custom URL scheme instead of needing a local server.
custom-protocol = ["tauri/custom-protocol"]
