[package]
name = "kutup"
version = "0.1.0"
description = "Kutup — E2EE Drive native shell (Tauri 2, desktop + mobile)."
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.77"

# Library target.
#  - rlib      → linked by the desktop binary (src/main.rs: `kutup_lib::run()`)
#  - staticlib → consumed by Tauri Mobile's iOS FFI tooling
#  - cdylib    → consumed by Tauri Mobile's Android FFI tooling
# Cargo only emits the crate-types a given build requests, so a desktop
# `cargo build` still produces just `rlib`; `tauri ios build` asks for the
# staticlib, `tauri android build` for the cdylib. (The earlier OOM was
# `generate_context!()` embedding the ~2.6 GB OnlyOffice SDK — fixed by
# build:tauri stripping dist/onlyoffice/ before the embed; the crate-type
# list isn't the cause, so keeping all three is safe.)
[lib]
name = "kutup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime
tauri = { version = "2", features = ["protocol-asset"] }

# First-party plugins we'll consume from the JS side via @tauri-apps/api.
# Keep the list lean for v1 — add more as they become load-bearing.
tauri-plugin-dialog = "2"            # native file picker (open / save dialogs)
tauri-plugin-fs = "2"                # filesystem access from JS, scoped via capabilities
tauri-plugin-http = "2"              # native HTTP that bypasses CORS — used for big-file streaming uploads
tauri-plugin-os = "2"                # platform / locale info
tauri-plugin-shell = "2"             # spawn / open URL handler (desktop only effectively)
tauri-plugin-notification = "2"      # system notifications
tauri-plugin-store = "2"             # encrypted-at-rest preferences store for settings
tauri-plugin-process = "2"           # restart / exit, used by the updater flow

# Desktop-only: auto-updater. Mobile gets updates via the App Store /
# TestFlight / Play Store, so the in-app updater is irrelevant (and
# tauri-plugin-updater doesn't compile for iOS/Android targets anyway).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# OS keychain (`keyring` crate) — desktop **+ iOS**.
#
# keyring v3 ships NO default backend — each platform's credential store
# is an opt-in feature, and the dep for each is only compiled on its
# target. We enable:
#   • apple-native        → macOS Keychain *and iOS Keychain Services*
#                           (both call Apple's Security framework:
#                           kSecClassGenericPassword via SecItemAdd /
#                           SecItemCopyMatching / SecItemDelete)
#   • windows-native      → Windows Credential Manager
#   • sync-secret-service → Linux: the freedesktop D-Bus Secret Service API
#                           (served by gnome-keyring / KWallet / keepassxc /
#                           any provider) — not a KWallet- or
#                           gnome-keyring-specific API
#   • crypto-rust         → pure-Rust crypto for the secret-service
#                           transport (no OpenSSL build dependency)
#
# Per-platform behavior:
#   • macOS / Windows / iOS → vault commands succeed, session persists
#     across app restarts. iOS does NOT need an explicit
#     `keychain-access-groups` entitlement for Simulator dev; for
#     real-device / TestFlight builds the entitlement should be present
#     (tauri-action / `tauri ios init` generate a default).
#   • Linux → if no Secret Service provider is running, Entry ops return
#     NoStorageAccess; the JS side surfaces a "stay-signed-in unavailable"
#     toast and falls back to re-login per launch (graceful degradation).
#   • Android → no `keyring` backend exists. Gated out below. A future
#     custom Tauri plugin wrapping Android Keystore is the path; for
#     now the vault_set/get/delete commands stub-fail on Android only.
#
# (Stay on keyring v3 — v4 needs Rust 1.88; our MSRV is 1.77.)
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
  "crypto-rust",
] }

# Serde for any custom command payloads we add later.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime for streaming uploads / downloads in Rust.
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["custom-protocol"]
# Tauri's custom-protocol is required for release builds — embeds the frontend
# bundle and serves it via a custom URL scheme instead of needing a local server.
custom-protocol = ["tauri/custom-protocol"]

# Per-package override for the kutup shell crate: opt-level=1.
#
# `tauri::generate_context!()` const-evaluates the entire embedded
# frontend bundle plus the `Builder::default().plugin(...)...run(...)`
# chain's monomorphized generics, all inside *our* crate. At cargo's
# default release opt-level=3 a single rustc building kutup_lib peaks
# well past available RAM on modest build machines. opt-level=1 roughly
# halves that. The kutup shell crate is thin glue (plugin registration +
# the keyring vault commands); its runtime perf is irrelevant — the deps
# that matter (tauri internals, reqwest) still build at opt-level=3, and
# the real work lives in the JS frontend.
#
# NOTE: this matters far less now that build:tauri strips the ~2.6 GB
# OnlyOffice SDK from dist/ before `generate_context!()` runs — embedding
# that was the real OOM cause. Office-doc editing is therefore unavailable
# in the desktop bundle for now; the follow-up is to load the SDK from the
# user's server origin (see docs/desktop-build.md). Kept as a margin.
[profile.release.package.kutup]
opt-level = 1
