[package]
name = "kutup-cli"
description = "kutup CLI — E2E encrypted file storage client."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kutup"
path = "src/main.rs"

[dependencies]
kutup-crypto = { path = "../kutup-crypto" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
zeroize.workspace = true
dirs.workspace = true
redb.workspace = true
rpassword.workspace = true
rand.workspace = true
indicatif.workspace = true
mime_guess.workspace = true
qrcode.workspace = true
time.workspace = true
notify.workspace = true
url.workspace = true

# OS keychain only where it needs no C deps (Linux uses the file fallback).
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
keyring.workspace = true

[dev-dependencies]
hex.workspace = true
