[package]
name = "kutup-crypto"
description = "kutup shared E2EE primitives — the Rust mirror of frontend/src/crypto/ (libsodium-wrappers). Keep in sync."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dryoc.workspace = true
hkdf.workspace = true
sha2.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
bip39.workspace = true
thiserror.workspace = true
base64.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
