[package]
name = "kutup-federation-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
utoipa = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
