[package]
name = "kutup-server"
description = "kutup backend API (Rust rewrite of backend/) — Axum + sqlx."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kutup-server"
path = "src/main.rs"

[dependencies]
kutup-crypto = { path = "../kutup-crypto" }
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
utoipa.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
totp-rs.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
tokio-util.workspace = true
tempfile.workspace = true
