[package]
name = "kutup-server"
description = "kutup backend API — Axum + sqlx (end-to-end encrypted file storage)."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kutup-server"
path = "src/main.rs"

[dependencies]
kutup-chat-proto = { path = "../kutup-chat-proto", features = ["openapi"] }
kutup-federation-proto = { path = "../kutup-federation-proto", features = ["openapi"] }
kutup-crypto = { path = "../kutup-crypto" }
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
utoipa.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
totp-rs.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
tempfile.workspace = true
multer.workspace = true
# Unified federation transport and storage capacity probe.
reqwest.workspace = true
rand.workspace = true
rand09 = { package = "rand", version = "0.9" }
# Direct use of the pinned libsignal sealed-sender certificate primitives. The
# offline root is never configured here; only a root-signed server certificate
# and its online private key are loaded by the service.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.97.2" }
