[package]
name = "kutup-transparency-auditor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kutup-transparency-auditor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
kutup-chat-proto = { path = "../kutup-chat-proto" }
